--- a/TestGuru/Gemfile
+++ b/TestGuru/Gemfile
@@ -26,6 +26,7 @@ gem 'jbuilder', '~> 2.7'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+gem 'devise', '~> 4.8', '>= 4.8.1'
 gem 'rubocop', require: false
 gem 'rubocop-rails', require: false
 
